--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -93,7 +93,7 @@
 
         /* section1 */
         .headback {
-            background-image: url(images/headback.avif);
+            background-image: url(images/headback.webp);
             background-size: cover;
             height: 50vh;
             text-align: center;
@@ -696,7 +696,7 @@
                     </label>
                 </div>
                 <div>
-                    <img src="images/logoETB-1 (1).webp" alt="logoETB-1">
+                    <img src="images/headlogo.webpf" alt="headlogo">
                 </div>
                 <div>
                     <button><i class="fa fa-phone" aria-hidden="true"></i> get in touch</button>
@@ -907,7 +907,7 @@
                             <div><img src="images/sec3-6.webp" alt="sec6"></div>
                         </div>
                         <div>
-                            <img src="images/sec3-main.jpg" alt="sec3-1">
+                            <img src="images/sec3-main.webp" alt="sec3-1">
                         </div>
 
                     </div>
@@ -931,13 +931,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="images/slider1.avif" class="d-block w-100" alt="...">
+                    <img src="images/slider1.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="images/slider2.avif" class="d-block w-100" alt="...">
+                    <img src="images/slider2.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/slider3.avif" class="d-block w-100" alt="...">
+                    <img src="images/slider3.webp" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
@@ -958,10 +958,10 @@
     <footer>
         <div class="container1">
             <div>
-                <img src="images/footlogo.avif" alt="footlogo">
+                <img src="images/footlogo.webp" alt="footlogo">
                 <p>Ecotour barahona is our favorite specialist for authrntic unique and memorable day ups and trips of
                     activities in southern dominican republic.</p>
-                <img src="images/footlogo2.avif" alt="footlogo2">
+                <img src="images/footlogo2.webp" alt="footlogo2">
                 <p>Travel environmental friendly with us and discover the main dimensions of dominican republic</p>
             </div>
             <div>
