--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -110,7 +110,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-image: url(images/splash1.avif);
+            background-image: url(images/splash1.webp);
             width: 100%;
             height: 100%;
             background-size: cover;
@@ -542,7 +542,7 @@
         footer::before {
             content: '';
             position: absolute;
-            background-image: url(images/splash2.avif);
+            background-image: url(images/splash2.webp);
             background-size: cover;
             left: 0;
             top: 0;
@@ -599,10 +599,10 @@
                 font-size: 20px;
             }
             .row1>div:nth-child(2){
-                width:30px;
+                width:30%;
             }
             .row1>div:last-child{
-                width:40%;
+                width:35%;
             }
             .row1>div:last-child>button{
                 padding: 3px 5px;
@@ -696,7 +696,7 @@
                     </label>
                 </div>
                 <div>
-                    <img src="images/headlogo.webpf" alt="headlogo">
+                    <img src="images/logoETB-1.webp" alt="headlogo">
                 </div>
                 <div>
                     <button><i class="fa fa-phone" aria-hidden="true"></i> get in touch</button>
