--- a/destination.html
+++ b/destination.html
@@ -68,7 +68,6 @@
             list-style: none;
             background-color: rgb(162 205 93);
             margin: 0;
-            padding: 10px;
             display: none;
             text-align: center;
         }
@@ -714,7 +713,7 @@
                 <img src="images/logoETB-1.webp" alt="">
             </div>
             <div class="call">
-                <a href="#call"><i class="fa-solid fa-phone" style="margin-right: 10px;"></i>get in touch</a>
+                <a href="#touch"><i class="fa-solid fa-phone" style="margin-right: 10px;"></i>get in touch</a>
             </div>
         </div>
         <ul class="nav">
@@ -862,12 +861,12 @@
                 </div>
             </div>
             <div>
-                <a href="#dates">check the dates</a>
+                <a href="private-tour.html">check the dates</a>
             </div>
         </div>
     </div>
     <footer>
-        <div class="box">
+        <div class="box" id="touch">
             <div>
                 <img src="images/footlogo.webp" alt="">
                 <p>Ecotour barahona is our favorite specialist for authrntic unique and memorable day ups and trips of
