--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -41,7 +41,7 @@
         header {
             position: sticky;
             top: 0;
-            z-index: 2;
+            z-index: 3;
             background-color: white;
         }
 
@@ -164,7 +164,7 @@
             display: none;
             position: sticky;
             top: 90px;
-            z-index: 2;
+            z-index: 3;
 
         }
 
@@ -256,10 +256,20 @@
         .sec1 i {
             padding-right: 10px;
         }
-
+        .map{
+            position:relative;
+            overflow: hidden;
+            width:100%;
+            padding-top: 56.25%;
+        }
         iframe{
-            width:700px;
-            height:400px;
+            position: absolute;
+            top:0;
+            left:0;
+            bottom:0;
+            right:0;
+            width:100%;
+            height:100%;
             border:0;
         }
 
@@ -594,8 +604,11 @@
                 margin: auto;
                 
             }
+            header i{
+                font-size: small;
+            }
             .row1>div:first-child{
-                width:10%;
+                width:30%;
                 font-size: 20px;
             }
             .row1>div:nth-child(2){
@@ -610,12 +623,7 @@
             }
             .headback>div{
                 padding:10px;
-               /* position: absolute;
-               top: 50%;
-               left: 50%;
-               transform: translate(-50%,-50%);
-               z-index: 3; */
-            }
+           }
             .headback p {
                 
                 font-size: 0.8rem;
@@ -640,11 +648,6 @@
         }
         .side2>div:nth-child(2){
             margin:0;
-        }
-        iframe{
-            width:380px;
-            height:400px;
-            border:0;
         }
         footer>div{
             grid-template-columns: repeat(2, 40%);
@@ -765,7 +768,7 @@
                         </div>
                         <div>
                             <div class="map">
-                                <iframe
+                                <iframe 
                                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d718524.3109415567!2d-71.55686333341431!3d18.241104870153425!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ebaf894f4997bb9%3A0x9005736fb2c405da!2sParaiso%2081000%2C%20Dominican%20Republic!5e0!3m2!1sen!2sin!4v1680484012992!5m2!1sen!2sin"
                                      allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade"></iframe>
