--- a/tour-list.html
+++ b/tour-list.html
@@ -380,7 +380,7 @@
 
         .picrow>div>div:hover {
             opacity: 0.8;
-            cursor: pointer;
+            cursor: url('images/cursor.webp'), pointer;
         }
 
         .pad {
@@ -512,7 +512,7 @@
                     </label>
                 </div>
                 <div>
-                    <img src="images/logoETB-1.webp" alt="logoETB-1">
+                    <img src="images/logoETB-1.webp" alt="">
                 </div>
                 <div>
                     <button><i class="fa fa-phone" aria-hidden="true"></i> get in touch</button>
