--- a/tour-list-expand.html
+++ b/tour-list-expand.html
@@ -671,19 +671,19 @@
         <div class="container">
             <div class="smlogo">
                 <div class="com">
-                    <div><img src="images/img3.png" alt=""></div>
+                    <div><img src="images/img3.webp" alt=""></div>
                     <h3>ALL CATEGORIES</h3>
                 </div>
                 <div class="com">
-                    <div><img src="images/img1.png" alt=""></div>
+                    <div><img src="images/img1.webp" alt=""></div>
                     <h3>DAY-TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="images/img2.png" alt=""></div>
+                    <div><img src="images/img2.webp" alt=""></div>
                     <h3>MULTI-DAY TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="images/img3.png" alt=""></div>
+                    <div><img src="images/img3.webp" alt=""></div>
                     <h3>PRIVATE-TOURS</h3>
                 </div>
             </div>
