--- a/ecotour.html
+++ b/ecotour.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,17 +30,14 @@
         display: flex;
         justify-content: space-around;
     }
-    /* .grid-header{
-        width:80%;
-        margin:auto;
-    } */
+    
     .grid-header .row3{
         display:flex;
         flex-wrap: nowrap;
         justify-content: space-around;
         background-color: #9bcd52;
         color:black;
-        height:40px;    
+        height:60px;    
     }
 
     .row4{
@@ -53,7 +51,7 @@
         font-size: 0.9rem;
     }
     .row3>div{
-        margin-top: 6px;
+        margin-top: 15px;
     }
     .phone{
         border:solid 2px #9bcd52;
@@ -69,6 +67,7 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .photoA {
+        align-items: start;
         text-align: center;
         color: white;
         background-color: rgba (50%, 50%, 50%, 0.5);
@@ -179,19 +178,15 @@
     color: rgb(89, 85, 85);    
 }
 .geo{
-     margin-left: 100px;
-    /* align-items:center; */
-    /* margin-top: 20px; */
+    margin-left: 100px;
     display:flex;
     flex-wrap: nowrap;
 
 }
 .row5{
-width:80%;
-margin-top: 50px;
-        /* display:flex;
-        flex-wrap: nowrap; */
-}
+    width:80%;
+    margin-top: 50px;
+        }
 .img{
     margin-right: 30px;
     align-items: start;
@@ -286,7 +281,7 @@ margin-top: 50px;
             
             </div>
             <div>
-                <img src="images/logoETB-1.avif" alt="">
+                <img src="images/logoETB-1.webp" alt="">
             </div>
             <div class="ph" style="padding:0px 40px;">
                 <a href="#call" class="phone"><i class="fa-solid  fa-phone"></i>&emsp;Get in touch</a>
@@ -404,7 +399,7 @@ margin-top: 50px;
     <div class="grid-footerB">
         <div class="footerC">
             <div class="foot">
-                <img src="images/footlogo.avif" alt="" >
+                <img src="images/footlogo.webp" alt="" >
 
                 <p>Ecotour Barahona is your facourite specialist for authentic , unique and memorable round trips , day
                     trips snd activities in Southwest of Dominician Republic .</p>
@@ -463,5 +458,6 @@ margin-top: 50px;
             </div>
         </div>
     </div>
+
 </body>
 </html>
