--- a/ecotour.html
+++ b/ecotour.html
@@ -49,6 +49,7 @@
         color:black;
         height:40px; 
         font-size: 0.9rem;
+        
     }
     .row3>div{
         margin-top: 15px;
@@ -289,14 +290,13 @@
         </div>
         <div class="row3" >
             <div class="row4">
-            <a href="Index.html" style="color:black;">HOME</a>
-            <a href="destination.html"style="color:black;"> DESTINATION</a>
-            <a href="private-tour.html"style="color:black;">PRIVATE TOUR</a>
-            <a href="single-tour-page.html" style="color:black;">SINGLE TOUR</a>
-            <a href="private-tour-popup.html" style="color:black;">PRIVATE TOUR POPUP</a>
-            <a href="tour-list.html"style="color:black;">TOURLIST</a>
-            <a href="tour-list-expand.html"style="color:black;">TOURLIST EXPAND</a>
-            <a href="ecotour.html"style="color:black;">ECOTOUR</a>
+            <a href="Index.html" style="color:black; text-decoration: none;">HOME</a>
+            <a href="destination.html"style="color:black;text-decoration: none;"> DESTINATION</a>
+            <a href="private-tour.html"style="color:black;text-decoration: none;">PRIVATE TOUR</a>
+            <a href="single-tour-page.html" style="color:black;text-decoration: none;">SINGLE TOUR</a>
+            <a href="private-tour-popup.html" style="color:black;text-decoration: none;">PRIVATE TOUR POPUP</a>
+            <a href="tour-list.html"style="color:black;text-decoration: none;">TOURLIST</a>
+            <a href="tour-list-expand.html"style="color:black;text-decoration: none;">TOURLIST EXPAND</a>
             </div>
         </div>
 
