--- a/private-tour.html
+++ b/private-tour.html
@@ -638,9 +638,9 @@
         .foot {
 
             display: grid;
-            /* grid-template-columns: 17% 17% 20% 17% 17%; */
-            grid-template-columns: repeat(5, 1fr);
-            gap: 35px;
+            grid-template-columns: 17% 16% 22% 17% 14%;
+            /* grid-template-columns: repeat(5, 1fr); */
+            gap: 30px;
             width: 65%;
             margin: auto;
             padding: 50px 0;
@@ -762,6 +762,9 @@
             .f {
                 overflow: hidden;
             }
+            .privatize>:nth-child(2){
+                width: 100%;
+            }
 
             .pp {
                 padding: 0;
@@ -812,11 +815,11 @@
             }
 
             .foot {
-                grid-template-columns: 40% 50%;
+                grid-template-columns: 50% 50%;
                 justify-content: space-between;
             }
 
-            .foot-e {
+            .foot-a {
                 grid-column: span 2;
             }
             .fee{
@@ -1156,7 +1159,7 @@
     <footer id="footer">
         <div class="foot">
             <div class="foot-a">
-                <div><img src="images/logoETB-1.webp" alt="logo"></div>
+                <div><img src="images/footlogo.webp" alt="logo"></div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, dicta aspernatur sapiente explicabo ea
                     repellendus accusantium? Voluptatum.</p>
                 <div style="text-align: center;"><img src="images/do.webp" alt="do"></div>
@@ -1193,9 +1196,9 @@
                 <div>
                     <h5>FOLLOW US</h5>
                     <div class="fee">
-                        <i class="fa-brands fa-facebook-f fa-2x" style="color: #fafafa;margin: 3px;"></i>
-                        <i class="fa-brands fa-instagram fa-2x" style="margin: 5px;"></i>
-                        <input type="image" src="images/ta.webp" alt="ta-lo" width="99%">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <input type="image" src="images/eye.jpg" alt="ta-lo">
                     </div>
                 </div>
             </div>
