--- a/tour-list.html
+++ b/tour-list.html
@@ -4,9 +4,11 @@
 <head>
     <script src="https://kit.fontawesome.com/8d92229b07.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <meta name="description" content="About ecotour">
+    <meta name="keywords" content="ecotour Tour-list">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOUR PAGE</title>
+    <title>Tour-list</title>
     <style>
         * {
             box-sizing: border-box;
@@ -483,7 +485,6 @@
 
             .load button {
                 padding: 10;
-
             }
 
             .picrow>div {
@@ -494,7 +495,6 @@
             .c7 {
                 grid-template-columns: 40% 40%;
                 justify-content: space-between;
-
             }
 
             .bg {
