--- a/tour-list.html
+++ b/tour-list.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/8d92229b07.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="description" content="About ecotour">
-    <meta name="keywords" content="ecotour Tour-list">
+    <meta name="keywords" content="ecotour Tour-list Budget-Friendly ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Vedha>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour-list</title>
     <style>
