improvising heading in mobile view

--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="single tour  ">
+    <meta name="keywords" content="horse riding, tour">
+    <meta name="author" content="sanjay">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
     <style>
         @font-face {
             font-family: font;
-            src: url(fonts/NotoSansZanabazarSquare-Regular.ttf);
+            src: url("fonts/NotoSansZanabazarSquare-Regular.ttf");
         }
 
         * {
@@ -614,17 +614,17 @@
                 font-size: small;
             }
             .row1>div:first-child{
-                width:30%;
+                width:10%;
+                
+            }
+            .row1>div:first-child i{
                 font-size: 20px;
             }
-            .row1>div:nth-child(2){
-                width:30%;
-            }
-            .row1>div:last-child{
-                width:35%;
-            }
+            
             .row1>div:last-child>button{
-                padding: 3px 5px;
+                padding: 0px 4px;
+            }
+            .row1>div:last-child>button a{
                 font-size: small;
             }
             .headback>div{
@@ -664,7 +664,10 @@
         }
         .menusection ul>li{
             width: 50%;
-        }
+           }
+           .menusection ul>li a{
+            font-size: small;
+           }
         #high:checked~nav .slider {
             left: 0%;
             width:20%;
