--- a/tour-list.html
+++ b/tour-list.html
@@ -418,7 +418,8 @@
 
         .c7 {
             display: grid;
-            grid-template-columns: 17% 17% 17% 17% 17%;
+            grid-template-columns: repeat(5, 17%);
+            justify-content: space-between;
             padding: 60px 0px;
         }
 
@@ -429,6 +430,8 @@
         .c7 h3 {
             color: rgb(155 205 82);
             margin: 10px 0px;
+            font-weight: 900;
+            font-size: small;
         }
 
         .c7>div:not(:first-child) p {
