--- a/private-tour.html
+++ b/private-tour.html
@@ -448,6 +448,7 @@
         .a>div,
         .f>div {
             background-color: rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
 
         .b {
@@ -486,7 +487,7 @@
         }
 
         .d {
-            background-image: url(images/4.webp);
+            background-image: url(images/nature.webp);
             background-repeat: no-repeat;
             background-size: cover;
             padding: 10px;
@@ -495,7 +496,7 @@
         }
 
         .e {
-            background-image: url(images/2.webp);
+            background-image: url(images/headback.webp);
             background-repeat: no-repeat;
             background-size: cover;
             padding: 10px;
@@ -596,7 +597,8 @@
         }
 
         .foot-bg {
-            background-color: rgb(114, 173, 26);
+            /* background-color: rgb(114, 173, 26); */
+            background-color: rgb(179 220 108);
             display: grid;
             grid-template-columns: 50% 50%;
             padding: 80px 147px;
@@ -638,7 +640,7 @@
         .foot {
 
             display: grid;
-            grid-template-columns: 17% 16% 22% 17% 14%;
+            grid-template-columns:20% 13% 18% 20% 14%;
             /* grid-template-columns: repeat(5, 1fr); */
             gap: 30px;
             width: 65%;
@@ -648,7 +650,7 @@
 
         }
 
-        .foot h5 {
+        .foot h6 {
             color: #9bcd52;
         }
 
@@ -656,16 +658,17 @@
             text-align: justify;
             font-size: small;
         }
-
+{}
         ul {
             list-style: none;
-            text-align: justify;
+            /* text-align: justify; */
             padding: 0;
             line-height: 1.5;
         }
 
         li {
             padding: 10px 0;
+            font-size: smaller;
         }
 
         .foot-d div {
@@ -717,7 +720,9 @@
             }
             .nav>div{
                 display: grid;
-                grid-template-columns: repeat(2,50%);
+                /* grid-template-columns: repeat(2,50%); */
+                grid-template-columns: 28% 32% 45%;
+                justify-content: space-between;
                 text-align: left;
             }
             .tailor,
@@ -810,13 +815,20 @@
                 grid-template-columns: 100%;
             }
             .foot-bg {
-                grid-template-columns: 100%;
                 padding: 10px;
             }
-
+            .book-now{
+                font-size: 1rem;
+            }
             .foot {
-                grid-template-columns: 50% 50%;
+                grid-template-columns: 46% 46%;
                 justify-content: space-between;
+                /* font-size: medium; */
+                gap:17px;
+
+            }
+            #footer{
+                font-size: small;
             }
 
             .foot-a {
@@ -856,10 +868,10 @@
             <div class="nav-div">
                 <li><a href="index.html">home page</a></li>
                 <li><a href="destination.html">destination</a></li>
-                <li><a href="private-tour-popup.html">private tours popup</a></li>
+                <li><a href="private-tour-popup.html">private tour popup</a></li>
                 <li><a href="tour-list.html">tour list</a></li>
-                <li><a href="tour-list-expand.html">tour list expand</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
+                <li><a href="tour-list-expand.html">tour list expand</a></li>
                 <li><a href="ecotour.html">ecotour</a></li>
             </div>
         </ul>
@@ -1062,9 +1074,7 @@
                 <div class="f">
                     <div>
                         <h3>Lorem ipsum Dolar Sit</h3>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus deleniti, consequuntur ipsum
-                            vero, suscipit iusto dolore at consequatur ipsa dolores, consectetur quibusdam libero. Sequi
-                            explicabo soluta, est doloremque modi rem?</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus deleniti, consequuntur </div>
                     </div>
                 </div>
             </div>
@@ -1141,7 +1151,7 @@
             <div class="check-book">
                 <div class="book-now">
                     <div>
-                        <img src="images/calendar.webp" alt="cal">
+                        <img src="images/col.webp" alt="cal">
                     </div>
                     <div>
                         <div style="color: white;">Book Now</div>
@@ -1166,7 +1176,7 @@
                 <div>Travel environmently with us and discover the main destinationbof dominan Republic</div>
             </div>
             <div class="foot-b">
-                <h5>ABOUT US</h3>
+                <h6>ABOUT US</h6>
                     <ul>
                         <li>ABOUT ECOTOUR</li>
                         <li>BARHONA</li>
@@ -1176,7 +1186,7 @@
                     </ul>
             </div>
             <div class="foot-c">
-                <h5>CUSTOMER SERVICE</h5>
+                <h6>CUSTOMER SERVICE</h6>
                 <ul>
                     <li>BOOKING CONDITION</li>
                     <li>CONTACT-US</li>
@@ -1186,15 +1196,15 @@
                 </ul>
             </div>
             <div class="foot-d">
-                <h5>RESERVATIONS & BOOKINGS</h5>
+                <h6>RESERVATIONS & BOOKINGS</h6>
                 <ul>
-                    <li>MONDAY TO FRIDAY<br>From8.00amto8.00pm</li>
-                    <li>SATURDAYTOSUNDAY<br>From9.00amto5.00pm</li>
-                    <li>Atlantic Standard<br>Time+1(809)856 2260</li>
+                    <li>MONDAY TO FRIDAY From8.00am to 8.00pm</li>
+                    <li>SATURDAYTOSUNDAY From9.00am to 5.00pm</li>
+                    <li>Atlantic Standard Time +1(809)856 2260</li>
             </div>
             <div class="foot-e">
                 <div>
-                    <h5>FOLLOW US</h5>
+                    <h6>FOLLOW US</h6>
                     <div class="fee">
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-instagram"></i>
