--- a/tour-list.html
+++ b/tour-list.html
@@ -6,7 +6,7 @@
     <meta name="description" content="About ecotour">
     <meta name="keywords" content="ecotour Tour-list Budget-Friendly ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="Vedha>
+    <meta name="author" content="Vedha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour-list</title>
     <style>
