mobile view changes

--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -687,9 +687,16 @@
             font-weight: bold;
         }
         .menusection {
-            top:63px;
+            top:58px;
         }
         }
+        @media(min-width:320px){
+            header{
+                height: 58px;
+            }
+        }
+        
+    
     </style>
 </head>
 
