--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="About ecotour">
+    <meta name="keywords" content="ecotour Home-Page all-pages ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Jenna">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_page</title>
     <style>
@@ -431,7 +434,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            font-family: font;
+
         }
 
         .lstrow>div {
@@ -440,24 +443,27 @@
 
         .lstrow>div h3 {
             color: white;
-            font-size: 13px;
+            font-size: 14px;
             font-weight: 100;
         }
 
         .lstrow>div h4 {
             color: rgb(176 218 106);
+            padding-right: 6px;
         }
 
         .lstrow>div ul {
             list-style: none;
             color: white;
-            line-height: 2.5;
-            padding: 0;
+            padding: 0 25px 0 0;
+            font-size: 13px;
+            font-family: font;
+            padding-right: 20px;
         }
 
         .foot {
             display: grid;
-            grid-template-columns: 20% 20% 30%;
+            grid-template-columns: 15% 15% 18%;
             align-items: center;
             justify-items: center;
 
@@ -479,6 +485,10 @@
             .row1>div:last-child>button {
                 padding: 1px 5px;
                 font-size: 13px;
+            }
+
+            .middle {
+                margin: 80px 0px;
             }
 
             .cent-cont,
@@ -519,11 +529,12 @@
             }
 
             .booking>div:first-child span {
-                font-size: 1.5rem;
+                font-size: 1.1rem;
             }
 
             .booking>div button {
                 margin: 0 0px 20px;
+                padding: 1px 10px;
             }
 
             .booking>div {
@@ -741,7 +752,8 @@
                         of
                         activities in southern dominican republic.</h3>
                     <img src="images/footlogo2.webp" alt="">
-                    <h3>Travel environmental friendly with us and discover the main dimensions of dominican republic.
+                    <h3>
+                        Travel environmental friendly with us and discover the main dimensions of dominican republic.
                     </h3>
                 </div>
                 <div>
