--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -728,7 +728,12 @@
         }
 
         .row1>div:last-child>button {
-            font-size: small;
+            font-size: 6px;
+            padding: 0;
+        }
+
+        .row1>div:last-child>button i {
+            font-size: 7px;
         }
 
         .privatize{
@@ -773,6 +778,7 @@
 
         .head3 {
             grid-template-columns: 100%;
+            height: 600px;
         }
 
         .contain {
