--- a/tour-list.html
+++ b/tour-list.html
@@ -496,8 +496,7 @@
             }
 
             .c7 {
-                grid-template-columns: 40% 40%;
-                justify-content: space-between;
+                grid-template-columns: 100%;
             }
 
             .bg {
