--- a/private-tour.html
+++ b/private-tour.html
@@ -658,7 +658,6 @@
             text-align: justify;
             font-size: small;
         }
-{}
         ul {
             list-style: none;
             /* text-align: justify; */
@@ -819,6 +818,7 @@
             }
             .book-now{
                 font-size: 1rem;
+
             }
             .foot {
                 grid-template-columns: 46% 46%;
@@ -836,6 +836,20 @@
             }
             .fee{
                 width: 7%;
+            }
+        }
+        @media screen and (max-width:320px) {
+            .nav>div{
+                grid-template-columns: 100%;
+            }
+            .book-now{
+                font-size: 0.5em;
+            }
+            .check-dates button{
+                padding: 7px;
+            }
+            .check-dates{
+                padding: 0;
             }
         }
     </style>
