--- a/private-tour.html
+++ b/private-tour.html
@@ -723,6 +723,7 @@
                 grid-template-columns: 28% 32% 45%;
                 justify-content: space-between;
                 text-align: left;
+                font-size: small;
             }
             .tailor,
             .group {
@@ -841,6 +842,7 @@
         @media screen and (max-width:320px) {
             .nav>div{
                 grid-template-columns: 100%;
+                font-size: small;
             }
             .book-now{
                 font-size: 0.5em;
