--- a/private-tour.html
+++ b/private-tour.html
@@ -82,7 +82,7 @@
             color: #4b5b34;
             padding: 0;
             font-size: 1rem;
-            font-weight: 700;
+            font-weight: 500;
         }
 
         .right button {
@@ -106,19 +106,19 @@
         }
 
         .main-head>.left {
-            width: 9%;
+            /* width: 9%; */
             display: flex;
             justify-content: center;
         }
 
         .main-head>.right {
-            width: 19%;
+            /* width: 19%; */
             display: flex;
             justify-content: center;
         }
 
         .main-head>.middle {
-            width: 50%;
+            width: 30%;
         }
 
 
@@ -704,9 +704,9 @@
             .main-head>.left{
                 font-size:0.6rem;
             } 
-            .main-head>.right {
+            /* .main-head>.right {
                 width: 40%;
-            }
+            } */
 
             .right a {
                 font-size: 0.7rem;
@@ -723,7 +723,7 @@
             .nav>div{
                 display: grid;
                 /* grid-template-columns: repeat(2,50%); */
-                grid-template-columns: 28% 32% 45%;
+                grid-template-columns:30% 30% 36%;
                 justify-content: space-between;
                 text-align: left;
             }
@@ -881,9 +881,8 @@
                 <div><img src="images/logoETB-1.webp" alt=""></div>
             </div>
             <div class="right">
-                <div><button><a href="#telephone"><i class="fa-solid fa-phone" style="margin: 5px;"></i>GET IN
+                <button><a href="#telephone"><i class="fa-solid fa-phone" style="margin: 5px;"></i>GET IN
                             TOUCH</a></button></div>
-            </div>
         </div>
         <ul class="nav">
             <div class="nav-div">
