--- a/private-tour.html
+++ b/private-tour.html
@@ -88,7 +88,7 @@
         .right button {
             border: solid 1px #9bcd52;
             background-color: white;
-            padding: 0 5px 5px 5px;
+            /* padding: 0 5px 5px 5px; */
         }
 
         /* .main-head a {
@@ -723,7 +723,7 @@
             .nav>div{
                 display: grid;
                 /* grid-template-columns: repeat(2,50%); */
-                grid-template-columns:30% 30% 36%;
+                grid-template-columns:30% 30% 40%;
                 justify-content: space-between;
                 text-align: left;
             }
@@ -808,10 +808,9 @@
             }
             .check-dates {
                 justify-content: center;
-                font-size: 0.6rem;
+                font-size: 0.4rem;
                 padding: 10px;
             }
-
             .fant-box {
                 padding: 0;
             }
@@ -823,7 +822,7 @@
                 padding: 10px;
             }
             .book-now{
-                font-size: 1rem;
+                font-size: 0.8rem;
 
             }
             .foot {
