--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -730,7 +730,7 @@
 
         .row1>div:last-child>button {
             font-size: 6px;
-            padding: 0;
+            padding: 5px;
         }
 
         .row1>div:last-child>button i {
@@ -796,6 +796,7 @@
 
         .left2a>div {
             width: 50%;
+            text-align: center;
         }
 
         .left3 {
@@ -828,12 +829,21 @@
         }
 
         .footer {
-            grid-template-columns: 50% 50%;
+            grid-template-columns: 100%;
             padding-top: 80px;
         }
 
+        .footer>div:nth-child(2),
+        .footer>div:nth-child(3) {
+            text-align: left;
+            width: 100%;
+        }
 
-
+        .footer2,
+        .footer3 {
+            text-align: left;
+            width: 100%;
+        }
     }
 </style>
 
@@ -866,8 +876,8 @@
                 <li><a href="index.html">home</a></li>
                 <li><a href="destination.html">destination</a></li>
                 <li><a href="private-tour.html">private tour</a></li>
-                <li><a href="private-tour-popup.html">private_tour_popup</a></li>
-                <li><a href="tour-list.html">tour_list</a></li>
+                <li><a href="private-tour-popup.html">private tour popup</a></li>
+                <li><a href="tour-list.html">tour list</a></li>
                 <li><a href="tour-list-expand.html">tour expand</a></li>
                 <li><a href="ecotour.html">ecotour</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
