--- a/private-tour.html
+++ b/private-tour.html
@@ -109,6 +109,7 @@
             /* width: 9%; */
             display: flex;
             justify-content: center;
+            font-size: 0.8rem;
         }
 
         .main-head>.right {
@@ -151,7 +152,7 @@
         }
 
         .nav>div {
-            width: 90%;
+            width: 100%;
             margin: auto;
             display: flex;
             /* grid-template-columns: repeat(4, 15%); */
@@ -704,6 +705,9 @@
             .main-head>.left{
                 font-size:0.6rem;
             } 
+            .main-head>.right{
+                font-size: 0.8rem;
+            }
             /* .main-head>.right {
                 width: 40%;
             } */
@@ -727,8 +731,11 @@
                 justify-content: space-between;
                 text-align: left;
             }
+            .nav{
+                padding: 0;
+            }
             .nav a{
-                font-size: 1rem;
+                font-size: 0.6rem;
             }
             .tailor,
             .group {
